...

        // Do any additional setup after loading the view.
        
        manufacturerTableView.tableFooterView = UIView()
        manufacturerTableView.estimatedRowHeight = 44.0
        manufacturerTableView.rowHeight = UITableView.automaticDimension
        manufacturerTableView.accessibilityIdentifier = "tbl"
        pageNo = 0
        self.showSpinner(onView: self.view)
        restClient.getManufacturerList(pageNo: pageNo, pageSize: AppConstants.PAGE_SIZE, delegate: self)
        
    }
    
...
