...
                            <constraint firstItem="tLd-qh-wgf" firstAttribute="bottom" secondItem="7It-3X-dPr" secondAttribute="bottom" id="DGg-iF-5oU"/>
                            <constraint firstItem="tLd-qh-wgf" firstAttribute="leading" secondItem="7It-3X-dPr" secondAttribute="leading" id="bbh-at-gIA"/>
                            <constraint firstItem="tLd-qh-wgf" firstAttribute="trailing" secondItem="7It-3X-dPr" secondAttribute="trailing" id="k2B-ho-BeR"/>
                            <constraint firstItem="tLd-qh-wgf" firstAttribute="top" secondItem="7It-3X-dPr" secondAttribute="top" id="xQq-Rr-bPD"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Manufacturer" id="bdh-Zf-KSd"/>
                    <connections>
                        <outlet property="manufacturerTableView" destination="tLd-qh-wgf" id="yDg-wB-BtL"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="7UT-oG-Xg5" sceneMemberID="firstResponder"/>
            </objects>
...
